force-app/main/default/objects/KimbleOne__Sequence__c/KimbleOne__Sequence__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Sequence</label>
    <nameField>
        <label>Sequence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequences</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>