force-app/main/default/objects/KimbleOne__Sequence__c/fields/KimbleOne__Context__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Context__c</fullName>
    <label>Z_Obsolete - Context</label>
    <length>80</length>
    <type>Text</type>
</CustomField>