force-app/main/default/objects/KimbleOne__Sequence__c/fields/KimbleOne__ContextId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContextId__c</fullName>
    <externalId>true</externalId>
    <label>Context Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>