force-app/main/default/objects/KimbleOne__Sequence__c/fields/KimbleOne__CurrentValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CurrentValue__c</fullName>
    <label>Current Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>