force-app/main/default/objects/KimbleOne__Sequence__c/fields/KimbleOne__DisplayFormat__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DisplayFormat__c</fullName>
    <label>Display Format</label>
    <length>30</length>
    <type>Text</type>
</CustomField>