force-app/main/default/objects/KimbleOne__Sequence__c/fields/KimbleOne__Prefix__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Prefix__c</fullName>
    <label>Prefix</label>
    <length>30</length>
    <type>Text</type>
</CustomField>