force-app/main/default/objects/KimbleOne__Sequence__c/listViews/KimbleOne__All_Columns.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All_Columns</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__CurrentValue__c</columns>
    <columns>KimbleOne__DisplayFormat__c</columns>
    <columns>KimbleOne__Enum__c</columns>
    <columns>KimbleOne__Prefix__c</columns>
    <columns>KimbleOne__ContextId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Columns</label>
    <language>en_US</language>
</ListView>